<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".FourthQuestionActivity">

    <RadioGroup
        android:id="@+id/answerGroup4RG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question4TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourthQuestion"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/answer1Question4RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer1Q4" />

        <RadioButton
            android:id="@+id/answer2Question4RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer2Q4" />

        <RadioButton
            android:id="@+id/answer3Question4RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer3Q4" />
    </RadioGroup>
</LinearLayout>